projects/dms/dms-ml-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dms-ml-svc
  namespace: dms-ml
spec:
  selector:
    app: dms-ml
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
